--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div id="app">
+        <main>
+            <div class="main-container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quas in veniam laborum aliquam sit, facere porro ratione vel dolore aspernatur quisquam delectus cumque soluta iste. Animi quos amet eveniet!</div>
+        </main>
+
+    <aside>
+        <div class="aside-container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto impedit, voluptate ipsum, nemo inventore atque totam animi illum tenetur magnam unde sapiente asperiores, suscipit harum illo nisi ipsa laborum veniam!</div>
+    </aside>
+    </div>
 </body>
 </html>
