--- a/index.html
+++ b/index.html
@@ -13,11 +13,26 @@
 <body>
     <div id="app">
         <main>
-            <div class="main-container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quas in veniam laborum aliquam sit, facere porro ratione vel dolore aspernatur quisquam delectus cumque soluta iste. Animi quos amet eveniet!</div>
+            <div class="main-container">
+                <div class="back">
+                    <img src="assets/icons/arrow-left-02.svg" alt="Seta apontando para esquerda">
+                    <span>Voltar</span>
+                </div>
+
+                <h1>Formulário de matrícula</h1>
+                <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.</p>
+            </div>
         </main>
 
     <aside>
-        <div class="aside-container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto impedit, voluptate ipsum, nemo inventore atque totam animi illum tenetur magnam unde sapiente asperiores, suscipit harum illo nisi ipsa laborum veniam!</div>
+        <div class="aside-container">
+            <header>
+                <img src="assets/logo.png" alt="Logo Estrelas do Amanhã">
+                <h2>Porque cada momento de <span>aprendizado</span> conta</h2>
+                <p>Inscreva seu filho em nossa escola e veja-o florescer em um ambiente acolhedor, seguro e estimulante.</p>
+            </header>
+            <img src="assets/Illustration.svg" alt="Ilustração de crianças desenhando com a professora">
+        </div>
     </aside>
     </div>
 </body>
