--- a/index.html
+++ b/index.html
@@ -135,6 +135,29 @@
               </div>
 
             </fieldset>
+
+            <fielset class="enroll-options">
+              <legend>Opções de matrícula</legend>
+
+              <label>Selectione o turno de estudo</label>
+              <div class="radio-wrapper">
+                <div class="radio-inner">
+                  <div class="radio-image">
+                    <input type="radio" name="study-shift" id="morning" value="morning">
+                    <img src="assets/icons/sun-cloud-02.svg" alt="Ícone de sol com nuvens">
+                    <label for="morning">Manhã</label>
+                  </div>
+                </div>
+
+                <div class="radio-inner">
+                  <div class="radio-image">
+                    <input type="radio" name="study-shift" id="evening" value="evening">
+                    <img src="assets/icons/sun-02.svg" alt="Ícone de sol">
+                    <label for="evening">Tarde</label>
+                  </div>
+                </div>
+              </div>
+            </fielset>
           </form>
         </div>
       </main>
